2007-01-22  Rodney Dawes  <dobey@novell.com>

	* configure.in: Update for 2.17.90 release

2007-01-12  Jakub Steiner <jimmac@ximian.com>

	* applications-other: touchup, added missing sizes.

2007-01-12  Lapo Calamandrei <calamandrei@gmail.com>

	* updated 24x24 application-certificate
	* added applications-other scalable

2007-01-12  Jakub Steiner <jimmac@ximian.com>

	* application-certificate: make it a bit prettier. I'm not sure
		why we have this one at all, but it didn't look on par with the
		rest.
		
2007-01-11  Lapo Calamandrei  <calamandrei@gmail.com>

	* application-science and applications-multimedia tweaks
	* {16x16,22x22,24x24,32}/categories/applications-science.* : new icons

2007-01-10  Lapo Calamandrei  <calamandrei@gmail.com>

	* scalable/categories/applications-science.svg : new icon based of
		Andreas work

2007-01-08  Lapo Calamandrei  <calamandrei@gmail.com>

	* */status/priter-error.* : new icons
	* Various touchups

2007-01-08  Rodney Dawes  <dobey@novell.com>

	* configure.in: Update for 2.17.5 release

2007-01-05  Jakub Steiner <jimmac@ximian.com>

	* {16x16,22x22,24x24}/actions/media-eject.png: bitmap version of
	the eject icon

2007-01-05  Rodney Dawes  <dobey@novell.com>

	* 16x16/stock/text/Makefile.am:
	* 16x16/stock/text/stock_select-all.*:
	Remove this icon which is replaced by edit-select-all

	Fixes #388149

2007-01-03  Jakub Steiner <jimmac@ximian.com>

	* categories/applications-graphics: new icon from ulisse covering
		all sizes

2007-1-02  Lapo Calamandrei  <calamandrei@gmail.com>
	
	* {16x16,22x22,24x24,scalable}/actions/insert-image* : new icons
	* {16x16,22x22,24x24,scalable}/actions/insert-link* : new icons
	* {16x16,22x22,24x24,scalable}/actions/insert-text* : new icons

2006-12-22  Rodney Dawes  <dobey@novell.com>

	* 16x16/actions/Makefile.am: Remove help-about

	Fixes #388755

2006-12-22  Lapo Calamandrei  <calamandrei@gmail.com>

	* {32x32,scalable}/actions/edit-{undo,redo}* : new icons by Andreas