@@ -1,0 +1,12 @@
+NULL=
+
+iconsize=32x32
+category=stock
+subtype=generic
+icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)/$(subtype)
+
+icon_DATA =					\
+	stock_person.png			\
+	$(NULL)
+
+EXTRA_DIST = $(icon_DATA)
