@@ -122,6 +122,8 @@ scalable/Makefile
 32x32/mimetypes/Makefile
 32x32/places/Makefile
 32x32/status/Makefile
+32x32/stock/Makefile
+32x32/stock/generic/Makefile
 48x48/actions/Makefile
 48x48/animations/Makefile
 48x48/apps/Makefile
