@@ -1,3 +1,7 @@
+2007-01-26  Jakub Steiner <jimmac@ximian.com>
+
+	* 32x32/stock: fix bug #385240
+
 2007-01-22  Rodney Dawes  <dobey@novell.com>
 
 	* configure.in: Update for 2.17.90 release
